# wordle-bot

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.api  Dockerfile.cli  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  format.sh  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  docker.yml  performance.yml  pre-commit.yml  security.yml
app/: __init__.py  app_factory.py
apps/api/: app.py  pyproject.toml
apps/cli/: main.py  pyproject.toml
cli/: __init__.py  argument_parser.py  command_router.py
config/: settings.py
core/algorithms/: analytics_engine.py  benchmark_engine.py  daily_game_state_manager.py  dependency_container.py  game_state_manager.py  game_state_manager_strategy.py  solver_engine.py
core/algorithms/orchestrator/: __init__.py  orchestrator.py
core/algorithms/orchestrator/modes/: __init__.py  base_handler.py  daily_handler.py  offline_handler.py  random_handler.py  word_handler.py
core/algorithms/state_manager/: __init__.py  api.py  base.py  daily.py  strategies.py
core/coordinators/: __init__.py  game_coordinator.py
core/domain/: constants.py  models.py  types.py
core/factories/: __init__.py  handler_factory.py
core/services/: __init__.py  benchmark_service.py  game_initialization_service.py  game_summary_service.py  guess_analysis_service.py
core/use_cases/: analytics_engine.py  benchmark_engine.py  daily.py  daily_game_state_manager.py  game_state_manager.py  offline.py  orchestrator.py  random.py  solver_engine.py  word.py
formatters/: __init__.py  base_formatter.py  json_formatter.py  text_formatter.py
infrastructure/api/: game_client.py
infrastructure/data/: answers.txt  word_lexicon.py
libs/core/: __init__.py  pyproject.toml
libs/core/algorithms/: __init__.py  analytics_engine.py  benchmark_engine.py  game_state_manager.py  orchestrator.py  solver_engine.py
libs/core/tests/: test_analytics_engine.py
libs/shared/: __init__.py  pyproject.toml
libs/shared/config/: settings.py
libs/shared/domain/: __init__.py  models.py
libs/shared/infrastructure/api/: __init__.py  game_client.py
libs/shared/infrastructure/data/: answers.txt  word_lexicon.py
libs/shared/tests/: __init__.py  test_display.py
libs/shared/utils/: display.py  logging_config.py
tests/: test_models.py  test_solver_engine.py
utils/: display.py  logging_config.py
