[project]
name = "api"
version = "0.1.0"
description = "FastAPI service for Wordle Bot"
requires-python = ">=3.11"
dependencies = [
    "core",
    "shared",
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
]

[tool.uv.sources]
core = { workspace = true }
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps.api"]