[project]
name = "cli"
version = "0.1.0"
description = "CLI for Wordle Bot"
requires-python = ">=3.11"
dependencies = [
    "core",
    "shared", 
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
wordle-bot = "main:app"

[tool.uv.sources]
core = { workspace = true }
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]