[project]
name = "core"
version = "0.1.0" 
description = "Core algorithms and use-cases for Wordle Bot"
requires-python = ">=3.11"
dependencies = [
    "shared",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

