[project]
name = "shared"
version = "0.1.0"
description = "Shared domain & infrastructure for Wordle Bot"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libs.shared"]

